src/objects/Submission_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Android_Submission__c</fullName>
        <label>Android Submission</label>
        <referenceTo>Android_Submission__c</referenceTo>
        <relationshipLabel>Submission Summaries</relationshipLabel>
        <relationshipName>Submission_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Errors__c</fullName>
        <label>Number of Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tests__c</fullName>
        <label>Total Tests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Submission Summary</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submission Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>